--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 
-
+<div class="text-center">Welcome to the Phone book!</div>
+<div class="text-center">Press to Phone book, to create one!</div>
 
 {% endblock content %}
