--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="text-center">Welcome to the Phone book!</div>
-<div class="text-center">Press to Phone book, to create one!</div>
+<h2 class="text-center">Welcome to the Phone book!</h2>
+<h4 class="text-center">Press to Phone book buttom, to create one!</h4>
 
 {% endblock content %}
