--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
           <a class="nav-link active" href="{{ url_for('phonebook') }}">Phone Book</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class='nav-link active' href="{{ url_for('createaddress') }}">Add Phone number</a>
         </li>
       </ul>
       <form class="d-flex">
@@ -39,7 +39,10 @@
 </nav>
         <!-- container -->
         <div class="container">
-            {% block content %}  {% endblock content %}
+          {% include 'alert.html' %}
+          
+            {% block content %}  
+            {% endblock content %}
         </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
