--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h2 class="text-center">Welcome to the Phone book!</h2>
-<h4 class="text-center">Press to Phone book buttom, to create one!</h4>
+<h2 class="text-center ">Welcome to the Phone book!</h2>
+<h3 class="text-center ">Press to Sign Up buttom, to create one!</h3>
 
 {% endblock content %}
