--- a/app/templates/phonebook.html
+++ b/app/templates/phonebook.html
@@ -1,26 +1,26 @@
 {% extends 'base.html' %}
 
-{% block title %} Phone Book {% endblock title %}
+{% block title %} &#128213 Phone Book {% endblock title %}
 
 {% block content %}
-  
-<h2 class="text-center">Phone Book</h2>
 
+<h2 class="text-center">Phone Book</h2>
 <form method="post">
     {{ form.csrf_token }}
     <div class="form-group">
-    {{ form.address.label }}
-    {{ form.address(class='form-control', placeholder='Enter your address') }}
-
-    {{ form.name.label }}
-    {{ form.name(class='form-control', placeholder='Enter your name') }}
 
     {{ form.phone_number.label }}
-    {{ form.phone_number(class='form-control', placeholder='Enter your Phone number') }}
+    {{ form.phone_number(class='form-control', placeholder='Enter a phone number') }}
+
+    {{ form.name.label }}
+    {{ form.name(class='form-control', placeholder='Enter a name') }}
+
+    {{ form.notes.label }}
+    {{ form.notes(class='form-control', placeholder='Enter your notes') }}
 
     {{ form.submit(class = 'btn btn-success w-20 mt-3') }}
+
     </div>
 </form>
-    
 
 {% endblock content %}
