--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}  {% endblock title %}
+{% block title %}&#128213 Welcome!{% endblock title %}
 
 {% block content %}
 
