--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,11 @@
 
 {% block content %}
 
-<h2 class="text-center ">Welcome to the Phone book!</h2>
-<h3 class="text-center ">Press to Sign Up buttom, to create one!</h3>
 
+{% if current_user.is_authenticated %}
+    <h6 class="text-center">Signed in as: {{ current_user.username }}</h6>
+
+
+
+{% endif %}
 {% endblock content %}
