--- a/app/templates/book.html
+++ b/app/templates/book.html
@@ -1,16 +1,15 @@
 {% extends 'base.html' %}
 
-{% block title %} {{ contact.name }}
+{% block title %} {{ contact.name }} {% endblock title %}
 
-{% endblock title %}
 
 {% block content %}
     <h2 class="text-center">{{ contact.name }}</h2>
     <h4 class="text-center">{{ contact.phone_number }}</h4>
-    <h6 class="text-center">{{ post.date_created.strftime('%A, %B %d, %Y') }}</h6>
-    <p class="text-center">{{ post.notes }}</p>
+    <h6 class="text-center">{{ contact.date_created.strftime('%A, %B %d, %Y') }}</h6>
+    <p class="text-center">{{ contact.notes }}</p>
 
-    {% if current_user == post.author %}
+    {% if current_user == contact.author %}
     <div class="d-flex">
         <a href="{{ url_for('edit_contact', contact_id = contact.id) }}" class="btn btn-success">Edit Contact</a>
 
