--- a/app/templates/edit_contact.html
+++ b/app/templates/edit_contact.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %} Edit {{ post. title }} {% endblock title %}
+{% block title %} Edit {{ contact.name }} {% endblock title %}
 
 {% block content %}
+
+<h2 class="text-center">Edit {{ contact.name }}</h2>
 
 <form method="post">
     {{ form.csrf_token }}
