--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,10 +7,11 @@
         <meta name="Description" content="Enter your description here"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+        <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename = 'pictures/book.png' )}}">
 <title>{% block title %} {% endblock title %}</title>
 </head>
-<body>
+<body background="{{ url_for('static', filename='pictures/lg.jpg') }}">
     <!-- navbar -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container-fluid">
@@ -25,8 +26,9 @@
         </li>
         {% if current_user.is_authenticated %}
         <li class="nav-item">
-          <a class='nav-link active ' href="{{ url_for('phonebook') }}">Phone Book</a>
+          <a class='nav-link active ' href="{{ url_for('phonebook') }}">Phone Book</a>         
         </li>
+        <a class='nav-link active ' href="{{ url_for('logout') }}">Log out</a>
         <li class="nav-item">
         {% else %}
           <a class="nav-link active " href="{{ url_for('signup') }}">Sign Up</a>
